--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "simple-icons": "^15.21.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   },
